--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,27 +28,34 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.javaee-web-api-7.0.jar=../../SWP 25-02-2022/Libraries/javaee-web-api-7.0.jar
-file.reference.poi-4.1.2.jar=../../SWP 25-02-2022/Libraries/poi-4.1.2.jar
-file.reference.poi-ooxml-4.1.2.jar=../../SWP 25-02-2022/Libraries/poi-ooxml-4.1.2.jar
-file.reference.poi-ooxml-schemas-4.1.2.jar=../../SWP 25-02-2022/Libraries/poi-ooxml-schemas-4.1.2.jar
-file.reference.sqljdbc4.jar=../../PRJ301/sqljdbc4.jar
-file.reference.xmlbeans-3.1.0.jar=../../SWP 25-02-2022/Libraries/xmlbeans-3.1.0.jar
+file.reference.commons-collections4-4.4.jar=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.19.jar=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\commons-compress-1.19.jar
+file.reference.gson-2.8.2.jar=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\gson-2.8.2.jar
+file.reference.javaee-web-api-7.0.jar-1=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\javaee-web-api-7.0.jar
+file.reference.poi-4.1.2.jar-1=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\poi-4.1.2.jar
+file.reference.poi-ooxml-4.1.2.jar-1=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\poi-ooxml-4.1.2.jar
+file.reference.poi-ooxml-schemas-4.1.2.jar-1=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\poi-ooxml-schemas-4.1.2.jar
+file.reference.sqljdbc4.jar-1=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\sqljdbc4.jar
+file.reference.xmlbeans-3.1.0.jar-1=D:\\D\\SE1318_8\\SWP391\\Project\\zGit\\SWP391\\SWP391\\Libraries\\xmlbeans-3.1.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.javaee-web-api-7.0.jar}:\
-    ${file.reference.poi-4.1.2.jar}:\
-    ${file.reference.poi-ooxml-4.1.2.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.javaee-web-api-7.0.jar-1}:\
+    ${file.reference.poi-4.1.2.jar-1}:\
+    ${file.reference.poi-ooxml-4.1.2.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar-1}:\
+    ${file.reference.sqljdbc4.jar-1}:\
+    ${file.reference.xmlbeans-3.1.0.jar-1}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -75,7 +82,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
